--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>RubyGym</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="http://localhost:5678/uploads/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="http://localhost:5678/uploads/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="http://localhost:5678/uploads/favicon-16x16.png">
+    <link rel="icon" type="image/png" href="http://localhost:5678/uploads/favicon.ico">
+    <link rel="manifest" href="http://localhost:5678/uploads/site.webmanifest">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
